--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -82,11 +82,11 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Состояния](https://cyborgsandmages.com/posts/cored20rpg/conditions)
 
-Состояния - справочно
+[Состояния - справочно](https://cyborgsandmages.com/posts/cored20rpg/conditions-reference)
 
 [Действия](https://cyborgsandmages.com/posts/cored20rpg/actions)
 
-Действия - справочно
+[Действия - справочно](https://cyborgsandmages.com/posts/cored20rpg/actions-reference)
 
 [Базовые приемы](https://cyborgsandmages.com/posts/cored20rpg/basicmaneuvers)
 
@@ -98,13 +98,15 @@ v.025-18112023 (обновление от 08.12.2023)
 
 [Оружейные приемы](https://cyborgsandmages.com/posts/cored20rpg/weapon-maneuvers)
 
-[Боевые стили](https://cyborgsandmages.com/posts/cored20rpg/fighting styles)
+[Боевые стили](https://cyborgsandmages.com/posts/cored20rpg/fighting-styles)
 
 [Метамагия](https://cyborgsandmages.com/posts/cored20rpg/metamagic)
 
 [Воззвания](https://cyborgsandmages.com/posts/cored20rpg/invocations)
 
 [Исследовательские приемы](https://cyborgsandmages.com/posts/cored20rpg/exploration-knacks)
+
+[Списки заклинаний по классам](https://cyborgsandmages.com/posts/cored20rpg/class-spell-lists)
 
 ---
 
