--- a/src/content/posts/translations/foliant-of-war-part-2.mdx
+++ b/src/content/posts/translations/foliant-of-war-part-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Фолиант Войны - Глава 2 Опции Мастера. Доспехи и Щиты.
 description: ПЕРЕВОД части книги, посвященной снаряжению, а именно доспехам и щитам в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.
-date: 2024-02-20 
+date: 2024-02-20
 tags:
   - перевод
   - Доспехи
@@ -13,12 +13,11 @@ author: unknown
 translator: Олег Байков
 ---
 
->Этот перевод из пока неизвестной книги весьма хорош - особенно за счет иллюстраций от переводчика. 
->При этом многое описанное в этом документе перекликается с нашим подходом [к доспехам и щитам в Core d20 RPG](https://cyborgsandmages.com/posts/cored20rpg/armor)
->Поэтому рекомендуем к прочтению.
+> Этот перевод из пока неизвестной книги весьма хорош - особенно за счет иллюстраций от переводчика.
+> При этом многое описанное в этом документе перекликается с нашим подходом [к доспехам и щитам в Core d20 RPG](https://cyborgsandmages.com/posts/cored20rpg/armor)
+> Поэтому рекомендуем к прочтению.
 
 ---
-
 
 Этот раздел предлагает множество новых предметов и снаряжения, магических или нет, а также новые опции правил. Это дополнение к инструментам и советам, предлагаемым в Руководство мастера 5-й редакции. Если вы Мастер, рассмотрите возможность использования этих опций для повышения реализма, стимуляции фантазии игроков или иного улучшения игрового процесса за столом. Если вы игрок, имейте в виду, что ваш Мастер может разрешить любую из этих опций. Прежде чем внедрять их в персонажа, обязательно проконсультируйтесь со своим Мастером.
 
@@ -31,6 +30,7 @@ translator: Олег Байков
 Материал этой главы призван помочь вам. Игнорируйте любые правила, которые вам не нравятся или которые сделают вашу игру менее увлекательной, и не стесняйтесь настраивать любые правила, которые вы решите использовать. Как всегда, сделайте правила (и игру) своими собственными.
 
 ## Доспехи и щиты
+
 В этом разделе подробно описано несколько дополнительных вариантов брони и щитов, отличных от тех, что представлены в Книге игрока 5-ой редакции. Прежде чем использовать любой из этих вариантов, убедитесь, что ваш Мастер одобряет их. Не в каждом сеттинге кампании будут доступны все виды доспехов и щитов.
 
 В следующих разделах подробно описаны новые доспехи и щиты.
@@ -38,7 +38,7 @@ translator: Олег Байков
 Дополнительную информацию о доспехах и щитах можно найти в главе 5 «Снаряжение» Книге игрока.
 
 | Доспех                       | Стоимость | Класс доспеха (КД)             | Сила   | Скрытность | Вес      |
-|------------------------------|-----------|--------------------------------|--------|------------|----------|
+| ---------------------------- | --------- | ------------------------------ | ------ | ---------- | -------- |
 | Легкий доспех                |           |                                |        |            |          |
 | Маника                       | 300 зм    | 12 + модификатор Лов           | —      | Помеха     | 15 фнт.  |
 | Бригандина                   | 250 зм    | 13 + модификатор Лов           | —      | Помеха     | 15 фнт.  |
@@ -69,41 +69,43 @@ translator: Олег Байков
 
 Лёгкие доспехи, изготовленные из лёгких и тонких материалов, предпочитают ловкие искатели приключений, поскольку те предоставляют защиту, и при этом не ограничивают подвижность. Если вы носите лёгкий доспех, вы при определении Класса Доспеха добавляете модификатор Ловкости к базовому числу, предоставленному доспехом.
 
-![image](https://cyborgsandmages.com/images/foliant-2-1)
+![](/images/foliant-2-1.jpg)
 
 **Маника.** Маника — это очень большой нарукавник для одной руки, состоящий из перекрывающих друг друга металлических лент, приклепанных к кожаному рукаву с большим наплечником. Его часто носят с поножами и закрытым металлическим шлемом. Эту броню чаще всего используют гладиаторы.
 
-![image](https://cyborgsandmages.com/images/foliant-2-2)
+![](/images/foliant-2-2.jpg)
 
 **Бригандина.** Бригандина (бригантина) состоит из небольших стальных пластин, приклепанных к прочной, но гибкой кожаной основе.
 
 ## Средние доспехи
+
 Средние доспехи предлагают лучшую защиту, чем лёгкие, но немного ограничивают перемещение. Если вы носите средний доспех, вы при определении Класса Доспеха к базовому числу, предоставленному доспехом, добавляете модификатор Ловкости, но не более +2.
 
-![image](https://cyborgsandmages.com/images/foliant-2-3)
+![](/images/foliant-2-3.jpg)
 
 **Ламеллярный доспех.** Этот доспех состоит из небольших прямоугольных пластин, обычно металлических, но иногда и деревянных, соединенных вместе горизонтальными рядами, образуя защитную рубашку или кирасу.
 
-![image](https://cyborgsandmages.com/images/foliant-2-4)
+![](/images/foliant-2-4.jpg)
 
 **Кольчужный Хауберк.** Кольчужный хауберк и кольчужная рубашка схожи по конструкции, но у хауберка есть рукава, закрывающие плечи и ноги. Это обеспечивает большую защиту, но также затрудняет увлажнение колец.
 
-![image](https://cyborgsandmages.com/images/foliant-2-5)
+![](/images/foliant-2-5.jpg)
 
 **Нагрудник.** Нагрудник состоит из одной или нескольких частей металла, которые защищают туловище, скрепляются вместе и делаются более удобными благодаря слою кожи внутри. Они часто более модны, чем кирасы, и их можно найти в домах рыцарей или знати.
 
 ## Тяжелые доспехи
+
 Из всех видов доспехов, тяжёлые доспехи предоставляют лучшую защиту. Эти комплекты доспехов покрывают всё тело и созданы для защиты от самых разных атак. Их вес и нагрузку могут выдержать только самые тренированные воители.
 
 Тяжёлый доспех не позволяет добавлять к Классу Доспеха модификатор Ловкости, но и не даёт штраф, если модификатор Ловкости отрицательный.
 
-![image](https://cyborgsandmages.com/images/foliant-2-6)
+![](/images/foliant-2-6.jpg)
 
 Насколько мне известно, в реальности такого доспеха не существовало.
 
 **Полосатый доспех.** Этот доспех состоит из перекрывающихся горизонтальных полос металла, склепанных вместе, с кольчугой для защиты суставов. В полный комплект входит защита туловища, плеч и рук, а также верхней части ног.
 
-![image](https://cyborgsandmages.com/images/foliant-2-7)
+![](/images/foliant-2-7.jpg)
 
 **Кольчато-пластинчатый доспех.** Кольчато-пластинчатый доспех представляет собой комплект тяжелой кольчуги с металлическими пластинами, приклепанными или иным образом вставленными в кольца. В комплект входят туловище, плечи и ноги, а также перчатки и поножи.
 
@@ -120,19 +122,20 @@ translator: Олег Байков
 Аспис может быть изготовлен только из дерева, а экю - только из металла. Их специализированное использование делает другие материалы неэффективными.
 
 ### Описание щитов
+
 Щиты перечислены в алфавитном порядке.
 
-![image](https://cyborgsandmages.com/images/foliant-2-8)
+![](/images/foliant-2-8.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-9)
+![](/images/foliant-2-9.jpg)
 
 **Аспис.** Аспис — это большой деревянный щит (не менее 3 футов в поперечнике); особенно эффективен для создания стен щитов и защиты от дальних атак. Его размер и вогнутая форма делают его полезным инструментом во многих отношениях.
 
 Размеры и конструкция щита позволяют использовать его в качестве плавсредства. Если вы не носите тяжелые доспехи, вы можете использовать аспис, чтобы плавать по воде. Используя его для плавания, вы не получаете бонус КД щита.
 
-![image](https://cyborgsandmages.com/images/foliant-2-10)
+![](/images/foliant-2-10.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-11)
+![](/images/foliant-2-11.jpg)
 
 **Баклер.** Баклер — небольшой щит с рукоятью в центре. Он не обеспечивает особой защиты от стрел и других снарядов, но весьма эффективен в рукопашном бою. Помимо бонуса к КД, баклер обладает следующими свойствами:
 
@@ -144,13 +147,13 @@ translator: Олег Байков
 
 • Пока вы держите баклер, вы совершаете с преимуществом проверки характеристик, совершаемые для захвата другого существа, если это существо вашего размера или меньше.
 
-![image](https://cyborgsandmages.com/images/foliant-2-12)
+![](/images/foliant-2-12.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-13)
+![](/images/foliant-2-13.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-14)
+![](/images/foliant-2-14.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-15)
+![](/images/foliant-2-15.jpg)
 
 Это разные типы все того же экю.
 **Экю.** Экю — это щит среднего размера, достаточно большой, чтобы покрыть туловище, примерно треугольной формы. Чаще всего он бывает толстым и сделан из металла, так как его назначение — защита от молотов и другого оружия, которое было бы особенно опасно для солдата в пластинчатых доспехах.
@@ -159,17 +162,17 @@ translator: Олег Байков
 
 Кроме того, если вы используете правила с вариантным оружием, атаки с использованием вороньего клюва, кирки всадника или боевой кирки, направленные на повреждение вашей брони, будут совершаться с помехой по вам.
 
-![image](https://cyborgsandmages.com/images/foliant-2-16)
+![](/images/foliant-2-16.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-17)
+![](/images/foliant-2-17.jpg)
 
 **Миндалевидный или Каплевидный щит** — это большой деревянный щит миндалевидной формы с закругленной вершиной и заостренным низом. Это популярный выбор для кавалерии, поскольку его форма хорошо подходит для конной войны. В пешем походе щит немного более громоздкий, чем другие щиты, но этого недостаточно, чтобы удержать воинов от его использования.
 
 Пока вы верхом, миндалевидный щит дает вам бонус +3 к вашему КД, а не +2.
 
-![image](https://cyborgsandmages.com/images/foliant-2-18)
+![](/images/foliant-2-18.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-19)
+![](/images/foliant-2-19.jpg)
 
 **Павеза.** Павеза — это особый вид щита, обычно используемый только во время войны. Он слишком велик, чтобы эффективно использовать его в рукопашном бою; владение павезой требует двух рук и дает бонус +3 к вашему КД, но вы не можете атаковать или произносить заклинания, удерживая его. Он предназначен для установки и использования в качестве переносного барьера.
 
@@ -177,9 +180,9 @@ translator: Олег Байков
 
 Существо за павезой и в ее пространстве может действием поднять ее, прекращая ее эффекты и получая бонус КД щита. Существо, находящееся в пределах 5 футов от павезы, но не позади него, может действием совершить проверку Силы со Сл 15, опрокинув его при успехе.
 
-![image](https://cyborgsandmages.com/images/foliant-2-20)
+![](/images/foliant-2-20.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-21)
+![](/images/foliant-2-21.jpg)
 
 **Круглый щит.** Этот большой деревянный щит имеет круглую форму и обычно имеет железный выступ в центре, называемый умбоном. Его удерживают одним хватом за умбоном. Помимо бонуса к классу брони, круглый щит обладает следующими свойствами:
 
@@ -187,13 +190,13 @@ translator: Олег Байков
 
 • Вас нельзя лишить круглого щита (см. «Обезоруживание» Руководство Мастера стр. 272).
 
-![image](https://cyborgsandmages.com/images/foliant-2-22)
+![](/images/foliant-2-22.jpg)
 
 **Тарджет.** Тарджет — относительно небольшой круглый щит, обычно сделанный из железа или дерева, покрытого железом.
 
-![image](https://cyborgsandmages.com/images/foliant-2-23)
+![](/images/foliant-2-23.jpg)
 
-![image](https://cyborgsandmages.com/images/foliant-2-24)
+![](/images/foliant-2-24)
 
 Башенных щитов не существует, поэтому будет скутум.
 Башенный щит Башенный щит — это массивный щит, достаточно большой, чтобы за ним могло спрятаться существо Среднего размера. Он чрезвычайно эффективен против стрел и других снарядов, но громоздок и тяжел. Помимо бонуса к классу брони, башенный щит обладает следующими свойствами:
@@ -207,6 +210,7 @@ translator: Олег Байков
 • Вы не можете использовать башенный щит, находясь верхом. Щит слишком громоздкий, чтобы его можно было эффективно использовать на скакуне.
 
 ## Дополнительно
+
 Эти части различных доспехов никогда не сопровождают комплект доспехов по умолчанию, но их можно купить и установить на имеющиеся доспехи.
 
 **Шипы для доспехов.** Вы можете добавить шипы к своим доспехам. Если вы это сделаете, вы получите следующие преимущества:
