--- a/src/content/singles/support-us.mdx
+++ b/src/content/singles/support-us.mdx
@@ -8,53 +8,32 @@ date: 2023-10-30
 
 ---
 
-Поддержать проект вы можете на следующих площадках:
+Способы помочь нам приведены ниже
 
-[Boosty](https://boosty.to/cyborgsandmages)
-
-[Patreon](https://www.patreon.com/palikhov)
-
-[Buy me a coffee](https://www.buymeacoffee.com/cyborgsandmages)
-
-или детальнее
-
-## :one: БАНКОВСКИЙ ПЕРЕВОД
-
-  Если вы не из России или Беларуси - можно на карточки  
+## БАНКОВСКИЙ ПЕРЕВОД
 
 :credit_card: UAH [**MASTERCARD**  **5168 7520 1042 0431** ](https://next.privat24.ua/money-transfer/form/%7B%22form%22:%7B%22receiver%22:%7B%22source%22:%22manual%22,%22number%22:%225168752010420431%22%7D,%22amount%22:%22200%22,%22currency%22:%22UAH%22%7D%7D) 
 
-:credit_card: UAH **VISA** **4731 1856 3175 3719** 
-
-:credit_card: UAH **VISA** **4149 4390 2039 5731** 
-
 :credit_card: USD **MASTERCARD** **5168 7450 2229 9421**
 
-**работает для любых банков Украины:**  https://next.privat24.ua/money-transfer/card
-
-## :two: **PAYPAL**
-
-https://www.paypal.com/donate/?hosted_button_id=WNF7TPUX4RTHS
-
-https://www.paypal.com/donate/?hosted_button_id=KUGTV2MR449S2
-
-## :three: [**PATREON**](http://patreon.com/palikhov/) 
-
-## :four: [**BOOSTY**](https://boosty.to/cyborgsandmages)
-
-## :five: [**BUY ME A COFFEE**](https://www.buymeacoffee.com/cyborgsandmages)
-
-## :six:  **Список поддерживаемых криптовалют:**
-
-**BTC**   bc1q90fp858mm5g2efyd05ld725c5uzag3ndl2tw4s
-
-**ETH**   0x9D5513a53142a4Ca9D1DFc212F5f18f39784907a
+## Криптовалюта
 
 **USDT TRC**   TCpK2MDwFXtj3t4ChNMcfJXiroswpU3hGh
 
-**DASH7**   TCpK2MDwFXtj3t4ChNMcfJXiroswpU3hGh
 
-## :seven: D&D Beyond
+## Подписки
+
+[PATREON](http://patreon.com/palikhov/) 
+
+[BOOSTY](https://boosty.to/cyborgsandmages)
+
+## Пожертвования
+
+[PAYPAL](https://www.paypal.com/donate/?hosted_button_id=WNF7TPUX4RTHS) 
+
+[BUY ME A COFFEE](https://www.buymeacoffee.com/cyborgsandmages)
+
+## D&D Beyond
 
 Вы всегда можете купить нам новую книгу на D&D Beyond в подарок.
 
