--- a/src/content/posts/cored20rpg/weaponproperties.mdx
+++ b/src/content/posts/cored20rpg/weaponproperties.mdx
@@ -16,37 +16,58 @@ author: Антон "Palant" Палихов
 
 Не всеми названиями я доволен, но пока остается так. Если у вас есть лучшие предложения – то пишите в дискорд/телеграм.
 
-Боеприпасы. Вы можете использовать оружие со свойством «боеприпас» для совершения дальнобойной атаки только если у вас есть боеприпасы для стрельбы. Каждый раз, когда вы совершаете атаку с помощью этого оружия, вы тратите один боеприпас. Вынимается боеприпас из колчана или другого контейнера частью атаки. Для зарядки одноручного оружия требуется одна свободная рука. В конце сражения вы восстанавливаете половину использованных боеприпасов, потратив минуту на поиски на поле боя. Если вы используете оружие со свойством «боеприпас» для совершения рукопашной атаки, вы считаете его импровизированным оружием (смотрите ниже «Импровизированное оружие»). Праща при этом должна быть заряжена.
+[Приложение 10. Свойства оружия](https://1drv.ms/w/s!Atcrhwwo1lBA5JxZnHg4UFqiOXTgTw?e=VYMzdK)
 
-**Бронебойное.** У этого оружия есть шип, который использует импульс оружия для пробивания вражеского доспеха. Если это оружие используется против противника в средних или тяжелых доспехах или с высокой естественной защитой, то броски попадания совершаются с бонусом +1.
+### Свойства Оружия
+У многих видов оружия есть особые свойства, отражённые в таблице «Оружие».
+
+**Примечание разработчика. Названия свойств оружия**
+
+Не всеми названиями я доволен, но пока остается так. Если у вас есть лучшие предложения – то пишите в дискорд/телеграм.
+
+**Боеприпасы.** Вы можете использовать оружие со свойством «боеприпас» для совершения дальнобойной атаки только если у вас есть боеприпасы для стрельбы. Каждый раз, когда вы совершаете атаку с помощью этого оружия, вы тратите один боеприпас. Вынимается боеприпас из колчана или другого контейнера частью атаки. Для зарядки одноручного оружия требуется одна свободная рука. В конце сражения вы восстанавливаете половину использованных боеприпасов, потратив минуту на поиски на поле боя. Если вы используете оружие со свойством «боеприпас» для совершения рукопашной атаки, вы считаете его импровизированным оружием (смотрите ниже «Импровизированное оружие»). Праща при этом должна быть заряжена.
+
+**Бронебойное.** Это оружие особо эффективно против существ, которые используют средние или тяжелые доспехи или особо прочным естественным доспехом.. Если это оружие используется против противника в средних или тяжелых доспехах или с высокой естественной защитой, то броски попадания совершаются с бонусом +1.
 
 **Гарда.** Эфес этого оружия имеет защиту, которая полностью покрывает держащую оружие руку, защищая от попыток обезоруживания, предоставляя бонус равный значению в скобках. При этом это оружие может быть использовано для нанесения атаки эфесом, которая наносит 1к2+ модификатор Силы дробящего урона и может лишить противника сознания.
 
-**Двойное.** У этого оружия два конца. Вы можете совершать им атаки используя правила сражения двумя оружиями.
+Громоздкое. Если вы используете это оружие в тесном пространстве, то броски атаки совершаются с помехой.
+
+**Двойное.** Оружие с этим свойством требует две руки для использования, и рассматривается как два отдельных одноручных оружия, когда вы держите его. Оба из этих оружий считаются имеющими свойство легкое, и ни у одного из них нет свойства двуручное. Две половины этого оружия могут наносить различный вид урона и иметь различные свойства, как приведено. Специальные свойства для двойного оружия прописаны отдельно для каждой стороны, даже особые. Хотя оно функционирует как два оружия, двойное оружие зачаровывается как единый предмет, и зачарование относится к обоим половинам оружия. Разоружение или разрушение любой стороны двойного оружия затрагивает всё оружие. Вы можете совершать им атаки используя правила сражения двумя оружиями.
 
 **Двуручное.** Это оружие нужно держать двумя руками, когда вы атакуете им.
 
 **Дистанция.** У оружия, с помощью которого могут совершаться дальнобойные атаки, указан диапазон в скобках после свойства «боеприпас» или «метательное». Дистанция состоит из двух чисел. Первое — это нормальная дистанция в футах, а второе указывает максимальную дистанцию оружия. При совершении атаки по цели, находящейся на расстоянии, превышающем нормальную дистанцию, бросок атаки совершается с помехой. Цель, находящуюся на расстоянии, превышающем максимальную дистанцию, атаковать нельзя.
 
-**Длинное.** Это оружие добавляет 5 футов к расстоянию, на котором вы можете совершать этим оружием атаки, а также провоцированные атаки.
+**Длинное**. Это оружие добавляет 5 футов к расстоянию, на котором вы можете совершать этим оружием атаки, а также провоцированные атаки.
 
-**Жестокое.** При критическом попадании это оружие наносит дополнительную кость урона.
+**Жестокое.** Если оружие с этим свойством наносит урон, вы можете перебросить кость урона если значение на ней равно 1. Вы должны использовать новое значение, даже если оно тоже равно 1. При использовании стиля Сражение большим оружием два переброса складываются в общий диапазон переброса 1-3.
 
 **Заряжаемое.** Из-за долгой перезарядки этого оружия вы можете выстрелить из него только один боеприпас одним действием, бонусным действием или реакцией, вне зависимости от количества положенных атак.
 
-**Крепкий хват (х).** Это оружие предоставляет бонус для проверок, осуществляемых против Обезоруживания равный значению в скобках.
+**Захват.** Когда вы попадаете в цель атакой ближнего боя или броском оружия со свойством "захват", вы можете потратить свое бонусное действие и попытаться провести противостояние "захват". Вы должны использовать свой бросок атаки, а цель использует свой навык ловкости (акробатика). Если вы добились успеха, ваше оружие захватывает цель. Другие свойства оружия (Обездвиживание, Предотвращение и т.д.) указывают это состояние как необходимое условие. Пока оружие захватывает цель, любая атака тем же оружием разрывает захват. Захват разрывается, если вы или цель выходите из зоны досягаемости. Схваченный противник также может потратить действие и попытаться сделать проверку силы (атлетика) или ловкости (акробатика) против вашего КС мастерства владения оружием. Если это удается, захват оружием разрывается. Если цель не захвачена метательным оружием, она также может разорвать захват оружия, если ей удастся вас обезоружить. Пока ваше оружие захватывает цель и вы держите оружие, вы можете попытаться толкнуть существо, используя бросок атаки вместо силы (атлетика).
+
+**Защитное (х).** При использовании оружия со свойством защитное вы получаете бонус от щита к вашему Классу Защиты указанный в скобках.
 
 **Игнорирование доспеха.** При использовании оружия с таким свойством обычный Класс Защиты доспеха игнорируется при определении КЗ цели.
 
-**Игнорирование Щита.** Оружие с таким свойством игнорирует защиту, предоставляемую щитом такого же или меньшего размера.
+**Игнорирование Щита.** Оружие с таким свойством игнорирует защиту, предоставляемую щитом такого же или меньшего размера. 
 
-**Крюк.** При попадании этим оружием его владелец может не наносить урон и попытаться сбить с ног цель. В этом случае цель должна успешно совершить спасбросок Силы с КС 8 + модификатор Силы владельца оружия + бонус владения владельца оружия или быть сбитой с ног.
+**Конный удар.** Когда вы сидите верхом на существе, способном передвигаться со скоростью 40 футов или быстрее, вы можете использовать импульс своего скакуна, чтобы нанести один мощный удар по цели, которая не лежит на земле или меньше вас. Если оружие также имеет досягаемость, то состояние Распластанность или разница в размерах не мешают нанесению удара. Вы должны приказать своему животному двигаться Рывком по прямой линии, проходящей через позицию цели. Когда вы входите в зону досягаемости, вы можете потратить одну из своих атак на специальную атаку ближнего боя. Если она попадает, цель получает уязвимость к урону атаки. После этого вы можете продолжить движение на своем скакуне и не провоцируете атаку по возможности, если вы покидаете зону досягаемости цели, если только ваша специальная атака ближнего боя не промахнулась.
+
+**Крепкий хват (х).** Это оружие предоставляет бонус для проверок, осуществляемых против Обезоруживания равный значению в скобках.
+
+**Крылатое.** Это оружие не позволяет цели приблизиться и может поймать оружие. Вы можете использовать бонусное действие, чтобы попытаться обезоружить существо в пределах досягаемости, используя крылатое оружие. После того как вы нанесли урон существу, которое вы могли бы захватить крылатым оружием, цель не может двигаться прямо к вам, а область в пределах вашей досягаемости становится для нее труднопроходимой, пока она не покинет пределы вашей досягаемости или вы не атакуете этим оружием снова. Удерживая существо таким образом, вы можете использовать бонусное действие, чтобы попытаться толкнуть его. Удержание заканчивается, если вы вытолкнете цель за пределы досягаемости оружия. Если в одном из бросков используется ваш бонус силы (атлетика), вы можете добавить бонус атаки оружия.
+
+**Крюк.** При попадании этим оружием его владелец может не наносить урон и попытаться сбить с ног цель. В этом случае цель должна успешно совершить спасбросок Силы с КС 8 + модификатор Силы владельца оружия + бонус владения владельца оружия или быть сбитой с ног. 
 
 **Лёгкое.** Легкое оружие небольшое и легкое в обращении, что делает его идеальным для использования при бое с двумя видами оружия.
 
-**Магазин (х).** Оружие с этим свойством может вмещать количество боеприпасов, указанное в скобках после этого свойства оружия. Вы можете совершить количество атак, указанное в скобках этого свойства, этим оружием, прежде чем оно потребует перезарядки.
+**Магазин (х).** Оружие с этим свойством может вмещать количество боеприпасов, указанное в скобках после этого свойства оружия. Вы можете совершить количество атак, указанное в скобках этого свойства, этим оружием, прежде чем оно потребует перезарядки. 
 
-**Метательное.** Если у оружия есть свойство «метательное», вы можете совершать им дальнобойные атаки, метая его. Если это рукопашное оружие, вы используете для бросков атаки и урона тот же модификатор характеристики, что и при совершении рукопашной атаки этим оружием. Например, если вы метаете ручной топор, вы используете Силу, а если метаете кинжал, то можете использовать либо Силу, либо Ловкость, так как у кинжала есть свойство «фехтовальное».
+**Метательное.** Если у оружия есть свойство «метательное», вы можете совершать им дальнобойные атаки, метая его. Если это рукопашное оружие, вы используете для бросков атаки и урона тот же модификатор характеристики, что и при совершении рукопашной атаки этим оружием. Например, если вы метаете ручной топор, вы используете Силу, а если метаете кинжал, то можете использовать либо Силу, либо Ловкость, так как у кинжала есть свойство «фехтовальное». 
+
+**Несмертельное.** Этим оружием наносится полный нелетальный урон.
 
 **Неудобное.** Это оружие слишком громоздко, чтобы его можно было использовать в ближнем бою. Вы получаете помеху при использовании этого оружия, если враг находится в пределах 5 футов от вас.
 
@@ -54,13 +75,14 @@ author: Антон "Palant" Палихов
 
 **Обезоруживающее (х).** Это оружие можно использовать для осуществления приема Обезоруживание. Если в скобках указано число, то проверка осуществляется с бонусом равным значению в скобках.
 
-**Ограниченное (Верховой бой).** Это оружие нельзя применять верхом.
+**Ограниченное (х).** Это оружие нельзя применять в условиях, указанных в скобках. Например, Ограниченное (Верховой бой). Это оружие нельзя применять верхом.
 
-**Ограниченное (х).** Это оружие нельзя применять в условиях, указанных в скобках.
+**Опасное.** При критическом попадании это оружие наносит дополнительную кость урона.
 
 **Особое.** Оружие со свойством «особое» используется по специальным правилам, указанным в описании этого оружия (смотрите ниже «Особое оружие»).
+**Отражение.** Используя бонусное действие вы готовитесь отражать атаки оружием вашего размера или меньше в ближнем и дальнем бою. При попадании по вам вы используете ваш Базовый КС оружейных приемов вместо вашего КЗ. Если результат броска атаки выше вашего КЗ но ниже КС оружейных приемов, то атака попадает по оружию, которое получает половину урона.
 
-**Очень длинное.** Это оружие добавляет 10 футов к расстоянию, на котором вы можете совершать этим оружием атаки, а также провоцированные атаки.
+**Очень** **длинное**. Это оружие добавляет 10 футов к расстоянию, на котором вы можете совершать этим оружием атаки, а также провоцированные атаки.
 
 **Парирование.** При осуществлении Парирования вы получаете бонус к КЗ равный значению в скобках.
 
@@ -70,23 +92,35 @@ author: Антон "Palant" Палихов
 
 **Плоское.** Вы можете использовать это оружие лежа не получая помеху на броски атаки при совершении дальнобойной атаки.
 
-**Подготовка.** Вы можете использовать это оружие наизготовку против натиска или другого дополнительного перемещения противника к вам. В случае попадания это оружие наносит двойной урон.
+**Подготовка.** Это оружие может быть разрушительным, если подготовить его к нужному моменту. Вместо атаки оружием вы можете завести оружие или прижать его к земле, в зависимости от конструкции оружия. В следующий раз, когда вы ударите подготовленным оружием до начала вашего следующего хода, вы можете бросить две дополнительные кости урона. После атаки оружие больше не является раненным. Раненое оружие ближнего боя можно использовать для атаки с преимуществом, когда враждебное существо, которое вы можете видеть, входит в зону вашей досягаемости.
 
-**Сбивающее с ног.** Это оружие можно использовать для осуществления приема Сбить с ног. Если в скобках указано число, то проверка осуществляется с бонусом равным значению в скобках.
+**Предотвращение.** Пока ваше оружие захватывает цель (см. свойство "Захват оружия") и вы держите оружие, цель не может приблизиться к вам и может только отойти от вас. Цель может двигаться к вам, только если попытается толкнуть вас. Если ей это удается, она также провоцирует атаку по возможности, которая автоматически попадает в цель.
+
+**Ранение.** Это оружие особенно травмирующе и смертоносно. При критическом попадании существо получает кровоточащее ранение и в начале каждого своего хода теряет хиты в количестве равном броску кости оружия. В случае получения лечения или успешного спасброска Телосложения существа в конце его хода ранение перестает кровоточить и урон от этого эффекта более не наносится.
+
+**Сбивающее** **с** **ног**. Это оружие можно использовать для осуществления приема Сбить с ног. Если в скобках указано число, то проверка осуществляется с бонусом равным значению в скобках.
 
 **Сила (х).** Для того чтобы эффективно использовать это оружие у вас должна быть Сила равной значению, указанном в скобках. В противном случае вы совершаете атаки с помехой.
 
-**Скрытое.** При попытках спрятать это оружие вы получаете бонус +2 к проверкам Ловкости рук (Ловкость).
+**Сильное натяжение.** Вы добавляете к урону этого дальнобойного оружия модификатор Силы.
 
-**Тяжёлое.** Существа Маленького размера совершают броски атаки тяжёлым оружием с помехой. Из-за размера и веса Маленькие существа не могут использовать такое оружие эффективно.
+**Скрытое**. При попытках спрятать это оружие вы получаете бонус +2 к проверкам Ловкости рук (Ловкость).
 
-**Универсальное.** Это оружие можно использовать как одной, так и двумя руками. Урон, указанный в скобках после этого свойства, означает урон при совершении рукопашной атаки двумя руками.
+**Смертоносное.** При критическом попадании это оружие наносит дополнительную кость урона.
 
-**Фехтовальное.** При совершении атаки фехтовальным оружием вы сами выбираете, какой модификатор использовать при совершении бросков атаки и урона — модификатор Силы или Ловкости. Для обоих бросков должен использоваться один и тот же модификатор.
+**Сметающий.** Оружие наносит атаки широкими, размашистыми движениями. Вы можете использовать свое бонусное действие, чтобы превратить одну из своих атак в специальную атаку "Сметающий удар". Если рядом с вами и вашей целью находится другое существо, и ваш бросок атаки поразил бы их обоих, ваша цель получает обычный урон, а другое существо получает 1к6 урона (этот урон не изменяется модификаторами бонуса урона или другими способностями). Если рядом с целью находятся стены, дружественные персонажи среднего или большего размера или другие подобные препятствия, вы не сможете использовать это свойство.
 
-**Оглушение.**
+**Статус.** Статусное оружие накладывает дополнительные эффекты при сильных ударах. Когда бросок атаки оружием со свойством статус превышает КЗ цели на 5 или более, оно накладывает дополнительный статусный эффект в зависимости от типа нанесенного урона. Критическое попадание гарантирует статусный эффект. Рубящее оружие наносит зияющие раны и обильное кровотечение, нанося дополнительный рубящий урон, равный вашему бонусу владения. Предметы, конструкты и Элементали могут быть невосприимчивы к этому урону, как и другие существа, которые не кровоточат, на усмотрение вашего ГМ. Дробящее оружие наносит ошеломляющие удары, которые ошеломляют цель. Нанесение этого статуса приводит к тому, что следующий бросок атаки цели будет сделан с помехой. Колющее оружие награждает точными или фокусными атаками, пробивая бреши в защите и оставляя цель уязвимой. Колющее оружие дает преимущество при первой атаке оружием против цели до начала ее следующего хода. 
 
-**Зацеп.**
+Тяжёлое. Существа, размер которых меньше среднего совершают броски атаки тяжёлым оружием с помехой. Из-за размера и веса такие существа не могут использовать такое оружие эффективно.
+
+**Универсальное.** Это оружие можно использовать как одной, так и двумя руками. Урон, указанный в скобках после этого свойства, означает урон при совершении атаки ближнего при хвате двумя руками.
+
+**Урон** (**Х**/**У**). Это оружие можно использовать для нанесения урона различного вида. Варианты урона указаны в скобках.
+
+**Фатальное (хкх).** При критическом попадании вместо обычных костей урона оружия используются значения в скобках.
+
+**Фехтовальное**. При совершении атаки фехтовальным оружием вы сами выбираете, какой модификатор использовать при совершении бросков атаки и урона — модификатор Силы или Ловкости. Для обоих бросков должен использоваться один и тот же модификатор.
 
 ---
 
