--- a/src/content/posts/translations/foliant-of-war-part-2.mdx
+++ b/src/content/posts/translations/foliant-of-war-part-2.mdx
@@ -13,7 +13,7 @@ author: unknown
 translator: Олег Байков
 ---
 
-> Этот перевод из пока неизвестной книги весьма хорош - особенно за счет иллюстраций от переводчика.
+> Этот перевод Tome of Warfare весьма хорош - особенно за счет иллюстраций от переводчика.
 > При этом многое описанное в этом документе перекликается с нашим подходом [к доспехам и щитам в Core d20 RPG](https://cyborgsandmages.com/posts/cored20rpg/armor)
 > Поэтому рекомендуем к прочтению.
 
