--- a/src/content/posts/translations/foliant-of-war-part-3-simple-weapons.mdx
+++ b/src/content/posts/translations/foliant-of-war-part-3-simple-weapons.mdx
@@ -67,15 +67,19 @@ translator: Олег Байков
 
 ### **Дробящее оружие**
 
-
+![image](images/foliant-simple-1-1.jpg)
 
 ***Бумеранг.*** Это оружие представляет собой специально вырезанный кусок дерева или кости, часто длиной не менее 2 футов, который можно метать на большие расстояния с большой точностью и мощностью. Этот вид бумеранга не возвращается; это особая классификация, в которой он считается импровизированным оружием.
 
 **Опциональные правила.** Когда вы совершаете дальнобойную атаку оружием с использованием бумеранга, он приобретает свойство фехтовальное. Кроме того, он наносит дробящий урон 1к6 при попадании оружием дальнего боя вместо 1к4.
 
+![image](images/foliant-simple-1-2.jpg)
+
 ***Рунгу.*** Рунгу — деревянная метательная палица с тяжелой ручкой или дубиной на одном конце.
 
 ### **Копья**
+
+![image](images/foliant-simple-1-3.jpg)
 
 ***Гарпун.*** Это копье имеет зазубренный наконечник, который помогает ему захватывать цель и оставаться внутри нее. Если по существу Большого размера или больше попали гарпуном, гарпун вонзается в часть его тела. Существо может действием попытаться вытащить гарпун и должно совершить проверку Мудрости (Медицина) Сл 20. В случае успеха гарпун благополучно удаляется. В случае провала цель получает колющий урон 1к6 от зазубрины, вырывающейся из её тела. Если проверка провалена на 10 или более, цель получает колющий урон 1к6 от зазубрины, а гарпун не удаляется из существа.
 
@@ -87,7 +91,11 @@ translator: Олег Байков
 
 **Опциональные правила.** Длинное копье обладает свойством громоздкое.
 
+![image](images/foliant-simple-1-4.jpg)
+
 ***Боевые вилы.*** Это оружие произошло от вил. Оно имеет только два зубца, которые могут быть параллельны друг другу или слегка расширяться, и обычно используется только при отсутствии копий или другого более эффективного оружия.
+
+![image](images/foliant-simple-1-5.jpg)
 
 По описанию очень похоже на плюмбату. Вот она.
 
@@ -97,17 +105,23 @@ translator: Олег Байков
 
 ### **Другое**
 
+![image](images/foliant-simple-1-6.jpg)
+
 ***Гаррота.*** Гаррота — оружие, предназначенное для убийства противника посредством удушения, обычно сделанное из тонкой проволоки. Однако гарроту вполне можно изготовить из всего, что есть под рукой, например, из веревки, полоски кожи или порванной одежды.
 
 Гарроту можно использовать только против существа Среднего или Маленького размера, против которого у вас есть преимущество в броске атаки. При попадании цель захватывается. Пока этот захват не закончится, цель не может дышать и начинает задыхаться, и вы получаете преимущество на броски атаки против нее.
 
 Когда вы используете действие, бонусное действие или реакцию при атаке гарротой, вы можете совершить только одну атаку, независимо от количества атак, которые вы обычно можете совершить.
 
+![image](images/foliant-simple-1-7.jpg)
+
 ***Макуауитль.*** Это оружие представляет собой плоскую деревянную дубину с торчащими из ее краев обсидиановыми лезвиями. Обсидиан может быть острее даже самой лучшей стали, что делает это оружие весьма грозным, несмотря на его примитивную конструкцию.
 
 **Опциональные правила.** Если у вас есть классовое умение «Боевой стиль», и вы выбрали «Дуэлянт» в качестве своего боевого стиля, вы не получите бонус от него, даже если держите макуауитль только одной рукой. Его примитивная конструкция не подходит для дуэлей.
 
 ### **Оружие дальнего боя**
+
+![image](images/foliant-simple-1-8.jpg)
 
 ***Копьеметалка.*** Копьеметалка представляет собой длинный толстый кусок дерева с вырезанным по всей длине желобом, выемкой или чашей на одном конце и ручкой на другом. Выемка удерживает древко копья или метательного копья, которое входит в паз. Тогда владелец сможет бросить копье с большей силой и точностью, чем без копьеметалки.
 
