--- a/src/content/posts/translations/foliant-of-war-part-3-simple-weapons.mdx
+++ b/src/content/posts/translations/foliant-of-war-part-3-simple-weapons.mdx
@@ -1,5 +1,5 @@
 ---
-title: Фолиант Войны - Глава 2 Опции Мастера. Доспехи и Щиты.
+title: Фолиант Войны - Глава 3 Оружие
 description: ПЕРЕВОД части книги, посвященной снаряжению, а именно простому оружию в пятой редакции. Перевод дополнительно хорош иллюстрациями, которые добавил переводчик.
 date: '2024-03-01'
 tags:
