Update equipment - tables.mdx

--- a/src/content/posts/cored20rpg/equipment - tables.mdx
+++ b/src/content/posts/cored20rpg/equipment - tables.mdx
@@ -12,6 +12,8 @@ tags:
 
 [ТАБЛИЦЫ СНАРЯЖЕНИЯ В DOCX](https://1drv.ms/w/s!Atcrhwwo1lBA5JkMQ9YeCV7_E2Tkng?e=mtAYbD)
 
+[Снаряжение](https://cyborgsandmages.com/posts/cored20rpg/equipment)
+
 ---
 
 ТАБЛИЦА 1. СТАНДАРТНЫЕ КУРСЫ ОБМЕНА
@@ -31,6 +33,9 @@ tags:
 | Плут |
 
 ## ДОСПЕХИ
+
+[Доспехи](https://cyborgsandmages.com/posts/cored20rpg/armor)
+
 
 ТАБЛИЦА 3. ДОСПЕХИ
 
@@ -121,6 +126,8 @@ tags:
 | Шедевр         | +10000 зм | увеличивается на 3 категории | 6 (возможно два двойных или одно двойное и одно тройное) |
 
 ## ОРУЖИЕ
+
+[Оружие](https://cyborgsandmages.com/posts/cored20rpg/weapons)
 
 Таблица 9. Оружие
 
@@ -498,6 +505,8 @@ tags:
 
 ## ПРОДУКТЫ ТРАВНИЧЕСТВА
 
+[Травяные смеси](https://cyborgsandmages.com/posts/cored20rpg/equipment-herbal-brews)
+
 Таблица 20
 
 | Предмет                            | Стоимость, зм | Вес, фунтов |
@@ -695,6 +704,8 @@ tags:
 | Бочка деревянная | 2 | 30 | 650 | 75 gallons |
 
 ## АЛХИМИЧЕСКИЕ ТОВАРЫ
+
+[Алхимические товары и инструменты](https://cyborgsandmages.com/posts/cored20rpg/alchemical-items-and-substances)
 
 Таблица 30. Инструменты для алхимии
 
@@ -901,6 +912,8 @@ tags:
 | Конюшня (в день)     | 0,5       | —   |
 
 ## ТРАНСПОРТ
+
+[Транспорт](https://cyborgsandmages.com/posts/cored20rpg/equipment-transport)
 
 Таблица 42. Наземный транспорт
 
@@ -1117,6 +1130,12 @@ tags:
 
 \* Для всех средних и тяжелых доспехов требуется нижний слой в виде гамбезона. Если у вас уже есть гамбезон, вы можете вычесть 10 м из стоимости при покупке комплекта средней или тяжелой доспеха.
 † Тяжелый доспех может быть улучшен до следующего уровня за разницу в стоимости. Например, кузнец может улучшить полулаты до латного доспеха за 750 зм.
+
+
+## Огнестрельное оружие
+
+[Огнестрельное оружие](https://cyborgsandmages.com/posts/cored20rpg/firearms)
+
 
 ---
 
